# galton

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  configure
src/: CMakeLists.txt  application.cc  application.h  ball.h  bucket.cc  bucket.h  emiter.h  histogram.cc  histogram.h  main.cc  matrix.cc  matrix.h  pin.cc  pin.h  receiver.h  test_application.cc  test_matrix.cc
